<resources>
    <string name="app_name">Foodify</string>
    <string name="language">Language</string>
    <string name="increase_quantity" />
    <string name="decrease_quantity" />
    <string name="add_new_card">Add New Card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder">Card Holder</string>
    <string name="save">Save</string>
    <string name="cart">Cart</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="confirm_order">Confirm order</string>
    <string name="_0">0</string>
    <string name="details">Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="get_started">Get Started</string>
    <string name="favorite">Favorite</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="recent_products">Recent Products</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="orders_history">Orders History</string>
    <string name="payments">Payments</string>
    <string name="choose_the_payment_method_you_d_like_to_use">Choose the payment method you\'d like to use.</string>
    <string name="price">Price:</string>
    <string name="piece">Piece:</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully</string>
    <string name="delivery_free">Delivery Free</string>
    <string name="delivered">Delivered</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">UserName</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="your_profile">Your profile</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="address">Address</string>
    <string name="orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notification</string>
    <string name="logout">Log out</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="carefully_prepared_to_please_every_taste">Carefully prepared to please every taste</string>
    <string name="_4_7">4.7</string>
    <string name="_20_30_min">20–30 Min</string>
    <string name="whether_it_s_a_full_meal_a_sweet_treat_or_a_refreshing_drink_every_item_is_thoughtfully_crafted_to_offer_great_taste_quality_and_satisfaction_enjoy_a_delicious_moment_with_every_bite_or_sip">Whether it\'s a full meal, a sweet treat, or a refreshing drink, every item is thoughtfully crafted to offer great taste, quality, and satisfaction. Enjoy a delicious moment with every bite or sip.</string>
    <string name="_1">1</string>
    <string name="welcome">Welcome</string>
    <string name="to_foodify">to Foodify</string>
</resources>